--- a/package.json
+++ b/package.json
@@ -21,15 +21,22 @@
   },
   "dependencies": {
     "extend-shallow": "^2.0.1",
-    "normalize-pkg": "^0.3.12",
+    "normalize-pkg": "^0.3.13",
     "through2": "^2.0.1"
   },
   "devDependencies": {
-    "gulp-format-md": "*",
-    "mocha": "*",
+    "gulp-format-md": "^0.1.9",
+    "mocha": "^2.5.3",
     "vinyl": "^1.1.1"
   },
-  "keywords": [],
+  "keywords": [
+    "gulp",
+    "json",
+    "normalize",
+    "package",
+    "package-json",
+    "pkg"
+  ],
   "verb": {
     "toc": false,
     "layout": "default",
@@ -40,8 +47,8 @@
       "gulp-format-md"
     ],
     "reflinks": [
-      "verb",
       "normalize-pkg",
+      "verb",
       "verb-readme-generator"
     ],
     "lint": {
